prevent download button from being stuck below editor window

--- a/style.css
+++ b/style.css
@@ -131,6 +131,16 @@ canvas {
    position: absolute;
    bottom: 0; 
    margin: 0.5em;
+   left: 0;
+   right: 0;
+}
+
+#statusbuttons {
+   display: block;
+   position: absolute;
+   right: 40%;
+   padding-right: 0.5em;
+   top: 0;
 }
 
 #busy {
